--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     ext.kotlin_version = '1.2.21'
+    ext.anko_version = '0.10.4'
     ext.android_support_version = "27.0.2"
     ext.android_lifecycle_version = '1.0.0'
 
@@ -9,6 +10,7 @@ buildscript {
         core: [
             fileTree(dir: 'libs', include: ['*.jar']),
             "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
+            "org.jetbrains.anko:anko-commons:$anko_version"
         ],
         common: [
             'io.reactivex.rxjava2:rxjava:2.1.3',
@@ -27,12 +29,8 @@ buildscript {
             "com.android.support:appcompat-v7:$android_support_version",
             "com.android.support:support-annotations:$android_support_version",
             'com.android.support.constraint:constraint-layout:1.0.2',
-
             "android.arch.lifecycle:extensions:$android_lifecycle_version",
-
-//            'io.reactivex.rxjava2:rxandroid:2.0.1',
-//
-//            'ru.terrakok.cicerone:cicerone:2.1.0'
+            'io.reactivex.rxjava2:rxandroid:2.0.1',
         ],
         uiTesting: [
             'com.android.support.test:runner:1.0.1',
