--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         unitTesting: [
             'junit:junit:4.12',
             'io.kotlintest:kotlintest:2.0.7',
+            'org.amshove.kluent:kluent-android:1.34',
             'org.mockito:mockito-core:2.8.47',
             "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
         ],
@@ -29,6 +30,7 @@ buildscript {
             "com.android.support:appcompat-v7:$android_support_version",
             "com.android.support:support-annotations:$android_support_version",
             'com.android.support.constraint:constraint-layout:1.0.2',
+            'androidx.core:core-ktx:0.1',
             "android.arch.lifecycle:extensions:$android_lifecycle_version",
             'io.reactivex.rxjava2:rxandroid:2.0.1',
         ],
@@ -43,7 +45,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0-beta1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
