--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ buildscript {
         core: [
             fileTree(dir: 'libs', include: ['*.jar']),
             "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version",
-            "org.jetbrains.anko:anko-commons:$anko_version"
         ],
         common: [
             'io.reactivex.rxjava2:rxjava:2.1.3',
@@ -19,14 +18,13 @@ buildscript {
         ],
         unitTesting: [
             'junit:junit:4.12',
-            'io.kotlintest:kotlintest:2.0.7',
-            'org.amshove.kluent:kluent-android:1.34',
+            'org.amshove.kluent:kluent:1.34',
             'org.mockito:mockito-core:2.8.47',
             "com.nhaarman:mockito-kotlin-kt1.1:1.5.0"
         ],
         ui: [
             project(":model"),
-
+            "org.jetbrains.anko:anko-commons:$anko_version",
             "com.android.support:appcompat-v7:$android_support_version",
             "com.android.support:support-annotations:$android_support_version",
             'com.android.support.constraint:constraint-layout:1.0.2',
@@ -43,6 +41,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "http://dl.bintray.com/jetbrains/spek" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-beta1'
