--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,9 +1,33 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
+buildscript {
+    dependencies {
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
+    }
+}
+
+apply plugin: 'org.junit.platform.gradle.plugin'
+
+junitPlatform {
+    filters {
+        engines {
+            include 'spek'
+        }
+    }
+}
+
+repositories {
+    maven { url "http://dl.bintray.com/jetbrains/spek" }
+}
+
 dependencies {
     implementation libraries.core
-    implementation libraries.unitTesting
+    testImplementation libraries.unitTesting
+    testImplementation 'org.junit.platform:junit-platform-runner:1.0.0'
+    testImplementation 'org.jetbrains.spek:spek-api:1.1.5'
+    testImplementation 'org.jetbrains.spek:spek-subject-extension:1.1.5'
+    testRuntime 'org.jetbrains.spek:spek-junit-platform-engine:1.1.5'
 }
 
 sourceCompatibility = "1.7"
