Add new game screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ android {
 dependencies {
     implementation libraries.core
     implementation libraries.ui
-    implementation 'com.android.support:support-v4:27.0.2'
+    testImplementation libraries.unitTesting
+    androidTestImplementation libraries.uiTesting
 }
