--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,30 @@
-apply plugin: 'com.android.application'
+    apply plugin: 'com.android.application'
+    apply plugin: 'kotlin-android'
+    apply plugin: 'kotlin-android-extensions'
 
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
-android {
-    compileSdkVersion 27
-    defaultConfig {
-        applicationId "com.vincentcarrier.omego"
-        minSdkVersion 21
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        multiDexEnabled true
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    android {
+        compileSdkVersion 27
+        defaultConfig {
+            applicationId "com.vincentcarrier.omego"
+            minSdkVersion 21
+            targetSdkVersion 27
+            versionCode 1
+            versionName "1.0"
+            testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+            multiDexEnabled true
+        }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
         }
     }
-}
 
-dependencies {
-    implementation libraries.core
-    implementation libraries.ui
-    testImplementation libraries.unitTesting
-    androidTestImplementation libraries.uiTesting
-}
+    dependencies {
+        implementation libraries.core
+        implementation libraries.ui
+        implementation project(":model")
+        testImplementation libraries.unitTesting
+        androidTestImplementation libraries.uiTesting
+    }
