--- a/model/build.gradle
+++ b/model/build.gradle
@@ -1,25 +1,27 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
-buildscript {
-    dependencies {
-        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
-    }
-}
-
-apply plugin: 'org.junit.platform.gradle.plugin'
-
-junitPlatform {
-    filters {
-        engines {
-            include 'spek'
+// For Spek
+    buildscript {
+        dependencies {
+            classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
         }
     }
-}
 
-repositories {
-    maven { url "http://dl.bintray.com/jetbrains/spek" }
-}
+    apply plugin: 'org.junit.platform.gradle.plugin'
+
+    junitPlatform {
+        filters {
+            engines {
+                include 'spek'
+            }
+        }
+    }
+
+    repositories {
+        maven { url "http://dl.bintray.com/jetbrains/spek" }
+    }
+//
 
 dependencies {
     implementation libraries.core
